2007-07-27 [colin]	2.10.0cvs72

	* src/summaryview.c
		Maemo: Remove less used menu items

2007-07-26 [colin]	2.10.0cvs71

	* src/messageview.c
		Maemo: destroy messageview after trashing mail.
		Maybe should be done on X11 too

2007-07-26 [colin]	2.10.0cvs70

	* src/folderview.c
	* src/mainwindow.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/summaryview.c
		Add View/Show or Hide/Column headers

2007-07-26 [colin]	2.10.0cvs69

	* src/procmime.c
		Fix unwanted output

2007-07-26 [colin]	2.10.0cvs68

	* src/ldapserver.c
		Fix possible crash on cache invalidation
	* src/compose.c
	* src/procmime.c
	* src/procmime.h
	* src/quote_fmt_parse.y
		Make replying to mails with big attachments
		much faster. Fixes bug 1224, 'The process of 
		Replying to emails with large attachments 
		seems unreasonably long...'

2007-07-26 [colin]	2.10.0cvs67

	* src/mimeview.c
	* src/matcher.c
	* src/common/ssl.c
		Fix threads use on BSDs

2007-07-26 [paul]	2.10.0cvs66

	* src/gtk/prefswindow.c
		fix account prefs breakage
		thanks to Colin

2007-07-26 [paul]	2.10.0cvs65

	* configure.ac
		standardise ./configure --help messages

2007-07-26 [colin]	2.10.0cvs64

	* src/addressbook.c
	* src/editaddress.c
		Fix two vCard-related crashes

2007-07-25 [colin]	2.10.0cvs63

	* src/inc.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_receive.c
		Maemo: Add a better way to notify of
		new mails
	* src/mainwindow.c
	* src/statusbar.h
	* src/summaryview.c
	* src/toolbar.c
		Maemo: Various layout fixes
	* src/gtk/prefswindow.c
		Maemo: Better prefs layout

2007-07-25 [paul]	2.10.0cvs62

	* src/textview.c
		fix the layout on maemo
		thanks to Colin

2007-07-25 [iwkse]	2.10.0cvs61

	* src/summaryview.c
		add 'o' shortcut on summaryview

2007-07-25 [iwkse]	2.10.0cvs60

	* src/textview.c
		fix o shortcut

2007-07-24 [colin]	2.10.0cvs59

	* src/mh.c
		Fix missing timestamp update on source
		folder when moving
	* src/textview.c
	* src/textview.h
		Better text layout on part's choices
