@@ -1,3 +1,8 @@
+2007-07-27 [paul]	2.10.0cvs73
+
+	* src/prefs_folder_item.c
+		adjust labels, add tooltips
+
 2007-07-27 [colin]	2.10.0cvs72
 
 	* src/summaryview.c
